--- a/main.css
+++ b/main.css
@@ -83,26 +83,28 @@ right: -2em;
     padding: .25rem .5rem !important;
 }
 @media (max-width: 700px) {
-  .hero-text-container{
-    font-size: 44px;
-    line-height: 52px;
-    width: 70vw;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    top: 70%;
-transform: translateY(70%);
-padding: 0.5em;
-  }
-  .hero{
-      margin-top: 1em;   
-  }
-  .hero-row{
-    padding-left: 15px !important;
-    padding-right: 15px !important
-  }
-  .image-container{
-    height: 80vh;
+    .hero-text-container{
+        font-size: 44px;
+        line-height: 52px;
+     
+    width: 7em;
+    height: 30vh;
+
+        right: 0;
+        bottom: 0;
+        left: 0;
+        top: 9em;
+   
+    padding: 1em;
+      }
+      .hero{
+          margin-top: 1em;   
+      }
+      .hero-row{
+        padding-left: 15px !important;
+        padding-right: 15px !important
+      }
+      .image-container{
+        height: 80vh;
+    }
 }
-  }
-  
